--- a/src/app/MyComponents/contact-us/contact-us.component.css
+++ b/src/app/MyComponents/contact-us/contact-us.component.css
@@ -1,8 +1,9 @@
 .sec1 {
     width: 100%;
-    height: 630px;
+    height: 700px;
     font-family: ALGERIAN;
-    font-size: 32px;
+    font-size: 25px;
+    margin-top: 34px;
 }
 
 .C_U {
@@ -12,15 +13,32 @@
 }
 
 .sec1 form {
-    /*border: black solid 2px;*/
-    font-family: Brush Script MT;
+    /* border: black dashed 1px;*/
+    font-family: Consolas;
     margin-left: 441px !important;
+    width: 430px;
+    height: 340px;
+    margin-top: 43px;
+    
 }
+
+.form-control {
+    max-width: 340px;
+}
+
+.form-label {
+    float: left !important;
+}
+
 
 .sec2 {
     /*border: coral dashed 5px;*/
     height: 230px;
     width: 100%;
+}
+
+form button {
+    margin-left: 88px !important;
 }
 
 .sec2 h1 {
