--- a/src/app/MyComponents/contact-us/contact-us.component.html
+++ b/src/app/MyComponents/contact-us/contact-us.component.html
@@ -1,26 +1,33 @@
 <section class="sec1">
-    <div class="C_U">
-        <h1>CONTACT US</h1>
+  <div class="C_U">
+    <h1>CONTACT US</h1>
+  </div>
+
+  <form (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name:</label>
+      <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" required>
     </div>
-    <form>
-        <label>Name:</label>
-        <input type="name" id="name"><br>
-        <label>Email:</label>
-        <input type="email" id="email"><br>
-        <label>MESSAGE:</label> <br>
-        <textarea name="Message" rows="16" cols="30"></textarea><br>
-        <input type="submit" value="SUBMIT">
-        <input type="reset" value="RESET" onClick="alert('CONFIRM FORM RESUBMISSION?')">
-    </form>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email:</label>
+      <input type="email" class="form-control" id="email" [(ngModel)]="email" name="email" required>
+    </div>
+    <div class="mb-3">
+      <label for="message" class="form-label">Message:</label>
+      <textarea class="form-control" id="message" [(ngModel)]="message" name="message" rows="6" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">SUBMIT</button>
+  </form>
 </section>
+
 <section class="sec2">
-    <h1>FIND US ON SOCIAL MEDIA</h1><br>
-    <div class="links">
-        <div class="fb"><a href="https://www.facebook.com/rojakphotography/"><img
-                    src="assets/ICONS/social-facebook-box-blue-icon.png" alt="fb icon">Facebook</a></div>
-        <div class="insta"><a href="https://www.instagram.com/rojak_photography/"><img
-                    src="assets/ICONS/Active-Instagram-3-icon.png" alt="ig icon">Instagram</a></div>
-        <p class="P_N"><a href="https://wa.me/923351538538" target="_blank"><img src="assets/ICONS/WhatsApp-icon.png"
-                    alt="W_A icon">+92 335 1538538</a></p>
-    </div>
+  <h1>FIND US ON SOCIAL MEDIA</h1><br>
+  <div class="links">
+    <div class="fb"><a href="https://www.facebook.com/rojakphotography/"><img
+          src="assets/ICONS/social-facebook-box-blue-icon.png" alt="fb icon">Facebook</a></div>
+    <div class="insta"><a href="https://www.instagram.com/rojak_photography/"><img
+          src="assets/ICONS/Active-Instagram-3-icon.png" alt="ig icon">Instagram</a></div>
+    <p class="P_N"><a href="https://wa.me/923351538538" target="_blank"><img src="assets/ICONS/WhatsApp-icon.png"
+          alt="W_A icon">+92 335 1538538</a></p>
+  </div>
 </section>
